Subscripts are absolutely nonsense in this case. What got me thinking that this could possibly work?

BUG: 275777

svn path=/trunk/extragear/office/kmymoney/; revision=1237002